# Reentrykit

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: 01_atmosphere.ipynb  02_trajectory.ipynb  03_OLD_real_flight_comparison.ipynb  03_apollo_4_validation.ipynb  03_real_flight_comparison.ipynb  04_OLD_stardust_genesis.ipynb  04_stardust_validation.ipynb  05_genesis_validation.ipynb  06_rotating_earth_validation.ipynb  07_tps_sizing_stardust.ipynb  07_visualization_demo.ipynb  08_tps_sizing_stardust.ipynb  09_tps_sizing_genesis.ipynb  scratch.ipynb
src/reentrykit/: __init__.py  aerothermal.py  atmosphere.py  planet.py  tps.py  trajectory.py  visualization.py
tests/: test_aerothermal.py  test_atmosphere.py  test_import.py  test_planet.py  test_tps.py  test_trajectory.py  test_visualization.py
